# envoy_v2_sds

./: .gitignore  Dockerfile  README.md  WORKSPACE  build.sh  envoy.yaml  start_service.sh  tcp_service.py  uds_service.py
src/: BUILD.bazel  eds.go  temp.proto
