load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_grpc_library")

proto_library(
  name = "temp_proto",
  srcs = ["temp.proto",],
)

go_grpc_library(
  name = "temp_go_proto",
  importpath = "github.com/misterwilliam/envoy_v2_sds/temp",
  proto = ":temp_proto",
)

go_binary(
  name = "eds",
  srcs = ["eds.go"],
  deps = [
    ":temp_go_proto",
    "@org_golang_google_grpc//:go_default_library",
    "@org_golang_x_net//context:go_default_library",
  ],
  importpath = "github.com/misterwilliam/envoy_v2_sds/eds",
)
